--- a/Heart Diseases.ipynb
+++ b/Heart Diseases.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('heart.csv')\n",#https://www.kaggle.com/datasets/johnsmith88/heart-disease-dataset?resource=download
+    "df=pd.read_csv('heart.csv')\n",
     "df.head()"
    ]
   },
